syntax = "proto3";

package user.service.v1;

option go_package = "github.com/kx-boutique/api/user/service/v1;v1";

import "validate/validate.proto";

service User {
  rpc CreateUser (CreateUserReq) returns (CreateUserResp) {}
}

message CreateUserReq {
  string name = 1 [(validate.rules).string.min_len = 1];
}

message CreateUserResp {
  string id = 1;
  string name = 2;
}

