syntax = "proto3";
package kratos.api;

option go_package = "app/auth/service/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
    Server server = 1;
    Data data = 2;
    Client client = 3;
    App app = 4;
}

message Server {
    message GRPC {
        string network = 1;
        string addr = 2;
        google.protobuf.Duration timeout = 3;
    }
    GRPC grpc = 1;
}

message Data {
    message Database {
        string url = 1;
        string user = 2;
        string password = 3;
        string db_name = 4;
    }
    Database database = 1;
}

message Client {
    message ClientService {
        string url = 1;
    }
    ClientService user_service = 1;
}

message App {
    message Jwt {
        string secret = 1;
        google.protobuf.Duration expiration = 900; // 15 minutes
    }
    Jwt jwt = 1;
}